プラグインのタイプをRuntimeに変更

--- a/Plugins/MyAnalytics/MyAnalytics.uplugin
+++ b/Plugins/MyAnalytics/MyAnalytics.uplugin
@@ -16,7 +16,7 @@
 	"Modules": [
 		{
 			"Name": "MyAnalytics",
-			"Type": "Developer",
+			"Type": "Runtime",
 			"LoadingPhase": "Default"
 		}
 	]
