--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -48,9 +48,17 @@ InitialAverageFrameRate=0.016667
 GameInstanceClass=/Script/UE4Analytics.AnalyticsGameInstance
 
 [Analytics]
-//ProviderModuleName=FileLogging
-//ProviderModuleName=MyAnalytics
 ProviderModuleName=AnalyticsMulticast
+ProviderModuleNames=MyAnalytics
+
 [AnalyticsDevelopment]
+ProviderModuleName=AnalyticsMulticast
 ProviderModuleNames=FileLogging,MyAnalytics
+
 [AnalyticsTest]
+ProviderModuleName=AnalyticsMulticast
+ProviderModuleNames=FileLogging,MyAnalytics
+
+[AnalyticsDebug]
+ProviderModuleName=AnalyticsMulticast
+ProviderModuleNames=FileLogging,MyAnalytics
