--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,6 +6,25 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/EngineSettings.GameMapsSettings]
+GameInstanceClass=/Script/UE4Analytics.AnalyticsGameInstance
+
+[Analytics]
+ProviderModuleName=AnalyticsMulticast
+ProviderModuleNames=MyAnalytics
+
+[AnalyticsDevelopment]
+ProviderModuleName=AnalyticsMulticast
+ProviderModuleNames=FileLogging,MyAnalytics
+
+[AnalyticsTest]
+ProviderModuleName=AnalyticsMulticast
+ProviderModuleNames=FileLogging,MyAnalytics
+
+[AnalyticsDebug]
+ProviderModuleName=AnalyticsMulticast
+ProviderModuleNames=FileLogging,MyAnalytics
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -16,6 +35,7 @@ TriangleMeshTriangleMinAreaThreshold=5.000000
 bEnableAsyncScene=False
 bEnableShapeSharing=False
 bEnablePCM=False
+bEnableStabilization=False
 bWarnMissingLocks=True
 bEnable2DPhysics=False
 LockedAxis=Invalid
@@ -35,6 +55,7 @@ bSuppressFaceRemapTable=False
 bSupportUVFromHitResults=False
 bDisableActiveActors=False
 bDisableCCD=False
+bEnableEnhancedDeterminism=False
 MaxPhysicsDeltaTime=0.033333
 bSubstepping=False
 bSubsteppingAsync=False
@@ -43,22 +64,6 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
+PhysXTreeRebuildRate=10
 
-[/Script/EngineSettings.GameMapsSettings]
-GameInstanceClass=/Script/UE4Analytics.AnalyticsGameInstance
 
-[Analytics]
-ProviderModuleName=AnalyticsMulticast
-ProviderModuleNames=MyAnalytics
-
-[AnalyticsDevelopment]
-ProviderModuleName=AnalyticsMulticast
-ProviderModuleNames=FileLogging,MyAnalytics
-
-[AnalyticsTest]
-ProviderModuleName=AnalyticsMulticast
-ProviderModuleNames=FileLogging,MyAnalytics
-
-[AnalyticsDebug]
-ProviderModuleName=AnalyticsMulticast
-ProviderModuleNames=FileLogging,MyAnalytics
